force-app/main/default/objects/SPO_Message__c/SPO_Message__c.object-meta.xml
<CustomObject>
    <description>Iteration feeds for a Spe order</description>
    <label>Message</label>
    <nameField>
        <displayFormat>Message {0000000}</displayFormat>
        <label>SPO Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>