force-app/main/default/objects/SPO_Message__c/fields/SPO_BriefConcerned__c.field-meta.xml
<CustomField>
    <fullName>SPO_BriefConcerned__c</fullName>
    <label>Brief concerned</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>SpeORDER_Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>