force-app/main/default/objects/SPO_Message__c/fields/SPO_Message__c.field-meta.xml
<CustomField>
    <fullName>SPO_Message__c</fullName>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>