force-app/main/default/objects/SPO_Message__c/fields/SPO_ReadByother__c.field-meta.xml
<CustomField>
    <fullName>SPO_ReadByother__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read by other</label>
    <type>Checkbox</type>
</CustomField>