force-app/main/default/objects/SPO_Message__c/fields/SPO_ReadByProduction__c.field-meta.xml
<CustomField>
    <fullName>SPO_ReadByProduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read by production</label>
    <type>Checkbox</type>
</CustomField>