force-app/main/default/objects/SPO_Message__c/fields/SPO_ReadByStore__c.field-meta.xml
<CustomField>
    <fullName>SPO_ReadByStore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read by store</label>
    <type>Checkbox</type>
</CustomField>