force-app/main/default/objects/SPO_Message__c/fields/SPO_WritterRole__c.field-meta.xml
<CustomField>
    <fullName>SPO_WritterRole__c</fullName>
    <label>Writter role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>